NLP TP's/texts/robotics/robotics.stackexchange_0000088863.txt
Q:

Any chance of compiling ROS 2 from sources now

I had problems compiling the latest release, solved (not really - see the update) by switching to the latest master, but the latter brought other problems, purpotedly caused by some machine-generated code:
$ colcon build --symlink-install
...
Starting >>> rosidl_generator_cpp                                                                                           
Finished <<< class_loader [2.10s]                                                                                                                         
Starting >>> rosidl_typesupport_introspection_c
--- stderr: rosidl_generator_cpp                                                                                                                           
/home/art/ros2_ws/build/rosidl_generator_cpp/rosidl_generator_c/rosidl_generator_cpp/msg/string_arrays__functions.c: In function ‘rosidl_generator_cpp__msg__StringArrays__init’:
/home/art/ros2_ws/build/rosidl_generator_cpp/rosidl_generator_c/rosidl_generator_cpp/msg/string_arrays__functions.c:52:47: error: incompatible types when assigning to type ‘rosidl_generator_c__String {aka struct rosidl_generator_c__String}’ from type ‘char *’
   msg->def_string_dynamic_array_value.data[0] = "What";
                                               ^
...

I wonder, how can I compile ROS 2 now from sources? I would need one which works with the RTI Connext DDS.
================== UPDATE
This is a parallel build, sometimes the same error shows as with release-latest.

Originally posted by uthinu on ROS Answers with karma: 118 on 2018-09-05
Post score: 0

Original comments
Comment by Dirk Thomas on 2018-09-05:
If you don't need the latest changes from master you should stick to the latest release - Bouncy. Anyway both states build just fine for other as well as the CI system. There might be a problem in your process. Please post all exact steps you are doing "from scratch" and mention your platform.
Comment by uthinu on 2018-09-05:
I am on xenial (precisely, Ubuntu 16-based linux mint, but if it matters, ros would be the first app I know which cares) but anyway I was told that Bouncy is for Ubuntu 18. I will upgrade to Ubuntu 18-based mint and start from scratch.
Comment by gvdhoorn on 2018-09-05:
Bouncy can be built from sources on Xenial (see REP-2000: ROS 2.0 Target Platforms).

A:

I switched to Bouncy as suggested by the commenters. This time, I also removed ardent installed via ubuntu. Then I reiterated https://github.com/ros2/ros2/wiki/Linux-Development-Setup. Whatever was the problem before, now it worked fine.
By the way, rosdep uses a distro name and not a ubuntu codename. So if you install on a derivative like Linux mint, add e.g. --os=ubuntu:xenial depending on which version of ubuntu your distro is based.

Originally posted by uthinu with karma: 118 on 2018-09-06
This answer was ACCEPTED on the original site
Post score: 0

